# cy-print-kit

./: package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: do_print.rs  lib.rs  strcuts.rs  util.rs
src/lib/components/: MainUi.svelte
src/lib/stores/: store.ts
src/routes/: +page.svelte
