[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc.6", features = [] }
tokio = {version = "1.39.0", features = ["full"] }
ureq = { version = "*", features = ["json"] }
chrono = "0.4"
tiberius = { version = "0.12.3", default-features = false, features = [
    "native-tls",
    "tds73",
] }
tokio-util = { version = "0.7.11", features = ["compat"] }
rand = "0.8.5"
